# cppSandbox

C++17/: CMakeLists.txt  README.md  main.cpp
C++20/: CMakeLists.txt  simple20.cpp
C++23/: CMakeLists.txt  simple23.cpp
abseil/: WORKSPACE
abseil/first_project/: BUILD  first_abseil_project.cc
codewars/: CMakeLists.txt  color_triangle.cpp  mult_str.cpp  nextbigger.cpp
codewars/divstrs/: CMakeLists.txt  div_str.cpp
codewars/multstr/: CMakeLists.txt
exceptions/: CMakeLists.txt  main.cpp
linear_algebra/: CMakeLists.txt
linear_algebra/myMatrixLib/: CMakeLists.txt
linear_algebra/myMatrixLib/inc/: matrix.h  matrix.hpp
linear_algebra/myMatrixLib/src/: matrix.cpp
linear_algebra/myMatrixLib/test/: t_matrix.cpp  t_matrix_mul.cpp
sort_and_search/: CMakeLists.txt  inheritance.cpp  inheritance.h  listOperations.cpp  listOperations.h  myBinaryTree.h  myMath.cpp  myMath.h  search.cpp  sort.cpp
sparsevector/: CMakeLists.txt  DotProd.h  HashDot.h  HashDotThreading.h  NaiveDotProduct.h  main.cpp
threading/: CMakeLists.txt  main.cpp
